Header and footer spacing fix

--- a/styles.css
+++ b/styles.css
@@ -13,14 +13,19 @@ body{
     }
 }
 #header{
+    display: flex;
     position: fixed;
     width: 100%;
+    justify-content: center;
     background-color: #F5F5F5;
+    border-bottom: 1px solid #959595 ;
+
     z-index: 999;
 }
 .header-desk{
     display: flex;
-    border-bottom: 1px solid #959595 ;  
+    width: 100%;
+    max-width: 1600px; 
     justify-content: space-between;
     padding: 25px 50px 25px 50px;  
     .index-button{
@@ -83,35 +88,44 @@ body{
 }
 .footer{
     display: flex;
-    padding: 25px 50px 25px 50px;
+    justify-content: center;
     border-top: 1px solid #959595;
-    font-size: 16px;
-    font-weight: 500;
-    color: #282828;
 
-    .footer-column{
+    .footer-container{
         display: flex;
         width: 100%;
-    }
-    .footer-localtime-text{
-        display: flex;
-        justify-content: center;
-        gap: 5px;
-    }
-    .footer-button{
-        display: flex;
-        gap: 10px;
-        justify-content: right;
-        padding: 0;
-        background: none;
-        border: none;              
-        color: #282828;
+        max-width: 1600px;
+        padding: 25px 50px 25px 50px;    
         font-size: 16px;
-        font-weight:600;
-        text-wrap: nowrap;
-        cursor: pointer;                          
+        font-weight: 500;
+        color: #282828; 
 
+
+        .footer-column{
+            display: flex;
+            width: 100%;
+        }
+        .footer-localtime-text{
+            display: flex;
+            justify-content: center;
+            gap: 5px;
+        }
+        .footer-button{
+            display: flex;
+            gap: 10px;
+            justify-content: right;
+            align-items: center;
+            padding: 0;
+            background: none;
+            border: none;              
+            color: #282828;
+            font-size: 16px;
+            font-weight:600;
+            text-wrap: nowrap;
+            cursor: pointer;
+        }
     }
+
 }
 #dropdown-menu-mask{
     display: none;
@@ -1070,12 +1084,12 @@ body{
     .header-desk{
         display: none;        
     }
-    .header-mobile, #dropdown-menu-header{
-        padding: 25px;
+    .header-mobile{
         display: flex;
+        width: 100%;
+        padding: 15px 25px 15px 25px;        
         border-bottom: 1px solid #959595 ;  
         justify-content: space-between;
-        gap: 25px;
         .index-button{
             display: flex;
             align-items: center;
@@ -1091,33 +1105,41 @@ body{
             color:#282828 ;
             }
         }
-        #menu-button, #close-menu-button{
+        #menu-button{
             display: flex;
-            align-items: center;
             font-size: 3rem;
         }
     }
     #dropdown-menu-mask{
+        
 
         #dropdown-menu{
-        top: 0;
-        right: 0;
-        left: 20vw;
-        height: 100%;
-        position: fixed;
-        background-color: #F5F5F5;
-        z-index: 9999;
-        
-            #close-menu-button{
+            top: 0;
+            right: 0;
+            width: 70%;
+            height: 100%;
+            position: fixed;
+            background-color: #F5F5F5;
+            z-index: 9999;
+
+
+            #dropdown-menu-header{
                 display: flex;
-                width: 100%;
+                padding: 15px 25px 15px 25px;         
+                border-bottom: 1px solid #959595 ;
                 justify-content: right;
+
+                #close-menu-button{
+                    display: flex;
+                    font-size: 3rem;
+                }   
             }
+
             #dropdown-menu-list{
                 display: flex;
                 flex-direction: column;
                 gap: 60px;                
-                padding: 60px 25px 60px 25px;
+                padding: 60px 15px 60px 15px;
 
                 .dropdown-menu-list-item{
                     display: flex;
@@ -1143,15 +1165,17 @@ body{
         display: block;
     }
     .footer{
-        padding: 35px 15px 35px 15px;
-        font-size: 20px;
+        .footer-container{
+            padding: 15px 25px 15px 25px;
+            font-size: 16px;
 
-        .footer-localtime-text{
-            display: none;
-        }
-        .footer-button{
-            font-size: 20px;
-        }
+            .footer-localtime-text{
+                display: none;
+            }
+            .footer-button{
+                font-size: 16px;
+            }
+        }        
     }
 
     /* Home styling */
